# keymap-align

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/keymap_align/: __init__.py  align.py  cli.py  config.py  layout_resolver.py
tests/: test_align_keymap.py  test_config.py  test_data.py  test_display_name_preservation.py  test_layouts.py
tests/test_keymaps/correct/: glove80_reference_reverse_key_order.keymap
tests/test_keymaps/misaligned/: glove80_input_badly_aligned.keymap  glove80_input_insufficient_bindings.keymap
